cli/tests/commands/snapshots/commands__fixture__filesystem_du_summarize.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs filesystem du -s <MOUNT>/subvol1
expression: "redact_paths(&btrfs_ok(&[\"filesystem\", \"du\", \"-s\", &subvol]), &mnt)"
---
     Total   Exclusive  Set shared  Filename
        0B          0B          0B  <MOUNT>/subvol1
