cli/tests/commands/snapshots/commands__fixture__filesystem_label.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs filesystem label <MOUNT>
expression: "btrfs_ok(&[\"filesystem\", \"label\", mp])"
---
test-fixture
