cli/tests/commands/snapshots/commands__fixture__filesystem_usage.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs filesystem usage <MOUNT>
expression: "redact_paths(&btrfs_ok(&[\"filesystem\", \"usage\", mp]), &mnt)"
---
Overall:
    Device size:		 109.00MiB
    Device allocated:		  88.00MiB
    Device unallocated:		  21.00MiB
    Device missing:		        0B
    Device slack:		        0B
    Used:			   2.01MiB
    Free (estimated):		  28.02MiB	(min: 17.52MiB)
    Free (statfs, df):		  27.02MiB
    Data ratio:			      1.00
    Metadata ratio:		      2.00
    Global reserve:		   5.75MiB	(used: 0B)
    Multiple profiles:		        no

Data,single: Size:8.00MiB, Used:1000.00KiB (12.21%)
   <DEV>		  64.00KiB

System,DUP: Size:8.00MiB, Used:16.00KiB (0.20%)
   <DEV>		 128.00KiB

Metadata,DUP: Size:32.00MiB, Used:512.00KiB (1.56%)
   <DEV>		 128.00KiB

Unallocated:
   <DEV>	  21.00MiB
